# LICO-mid360

./: CMakeLists.txt  README.md  package.xml
config/: coco.rviz  ct_odometry_fastlivo.yaml  ct_odometry_lvisam.yaml  ct_odometry_mid360.yaml  ct_odometry_r3live.yaml  ct_odometry_viral.yaml
config/fastlivo/: camera.yaml  imu.yaml  lidar.yaml
config/lvisam/: camera.yaml  imu.yaml  lidar.yaml
config/mid360/: camera.yaml  imu.yaml  lidar.yaml
config/r3live/: camera.yaml  imu.yaml  lidar.yaml
config/viral/: imu.yaml  lidar.yaml
data/: 2023-10-22-14-57-22_LIO.txt  corridor_LIO.txt  hall_LIO.txt  handheld_LICO.txt  hku2_LICO.txt  hku_main_building_LICO.txt  hku_park_00_.txt  hku_park_00_LICO.txt  mapowanie_gmach_LICO.txt  normal_LIO.txt
include/ikd-tree/: ikd_Tree.cpp  ikd_Tree.h
include/ivox3d/: ivox3d.h
launch/: odometry.launch
log/: odometry_node.DESKTOP-LDFTEUI.hong.log.INFO.20240805-213040.396895  odometry_node.DESKTOP-LDFTEUI.hong.log.INFO.20240805-213721.402208  odometry_node.DESKTOP-LDFTEUI.hong.log.INFO.20240806-201237.11547  odometry_node.DESKTOP-LDFTEUI.hong.log.INFO.20240808-204600.2473  odometry_node.DESKTOP-LDFTEUI.hong.log.INFO.20240810-143955.16130  odometry_node.DESKTOP-LDFTEUI.hong.log.INFO.20240810-145117.28742  odometry_node.DESKTOP-LDFTEUI.hong.log.INFO.20240810-145727.41231  odometry_node.DESKTOP-LDFTEUI.hong.log.INFO.20240810-145805.42379  odometry_node.DESKTOP-LDFTEUI.hong.log.INFO.20240810-145847.43610  odometry_node.DESKTOP-LDFTEUI.hong.log.INFO.20240810-150020.46684  odometry_node.DESKTOP-LDFTEUI.hong.log.INFO.20240813-212228.50676  odometry_node.DESKTOP-LDFTEUI.hong.log.INFO.20240813-212349.53391  odometry_node.DESKTOP-LDFTEUI.hong.log.INFO.20240813-212612.56905  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240805-211051.375049  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240805-213040.396895  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240805-213517.399652  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240805-213721.402208  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240805-213738.402696  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240805-214433.407454  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240805-214821.411561  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240805-214948.414117  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240806-201237.11547  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240806-201616.12307  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240810-143955.16130  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240810-144750.21194  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240810-144911.24496  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240810-145017.26724  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240810-145117.28742  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240810-145203.30119  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240810-145253.31865  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240810-145409.34781  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240810-145519.37025  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240810-145632.39757  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240810-145727.41231  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240810-145805.42379  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240810-145847.43610  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240810-145927.44911  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240810-150020.46684  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240810-150258.49236  odometry_node.DESKTOP-LDFTEUI.hong.log.WARNING.20240812-211618.1066  (+25 more)
src/: odometry_node.cpp
src/camera/: r3live.hpp
src/ikd-Tree/: ikd_Tree.h
src/lidar/: lidar_feature.h  lidar_handler.cpp  lidar_handler.h  livox_feature_extraction.cpp  livox_feature_extraction.h
src/ncnn_node/: ncnn_image.hpp
src/odom/: color_map.h  msg_manager.cpp  msg_manager.h  odometry_manager.cpp  odometry_manager.h  odometry_viewer.h
src/spline/: trajectory.cpp  trajectory.h
src/utils/: cloud_tool.h  (+1 more)
(+3 files in other folders)
